src/app.scss
@import '@fontsource/fira-mono';
@import '@fontsource/open-sans';
@import '@fontsource/montserrat/variable.css';

@import 'style/reset.scss';

:root {
	// TODO clean this up
	font-family: 'Open Sans', sans-serif;

	--font-mono: 'Fira Mono', monospace;
	--pure-white: #ffffff;
	--black: #000;
	--primary-color: #b9c6d2;
	--secondary-color: #d0dde9;

	--tertiary-color: #edf0f8;
	--accent-color: #ff3e00;
	--heading-color: rgba(0, 0, 0, 0.7);
	--text-color: #444444;
	--orange: #FF6A00;
	--blue: #17C0E9;

	--column-width: 42rem;
	--column-margin-top: 4rem;

	--sidebar-w: 20rem;
	--nav-side: 2rem;
	--nav-h: 3rem;

	--side-nav: 4.5rem;
	--top-offset: 4.5rem;

	--linemax: 42rem;

	--back: #ffffff;
	--back-light: #f6fafd;
	--back-api: #e5eef5;
	--prime: #ff3e00;
	--second: var(--blue); // Sidebar main color
	--flash: #40b3ff;
	--highlight: #ffff82;
	--heading: #222;
	--text: #444;
	--second-text: #7b7766;
	--sidebar-text: var(--black);
	--border-w: 0.3rem;
	--border-r: 0.4rem;

	--shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1)
}

// TODO move this to font file
h1,
.h1,
h2,
.h2,
h3,
.h3,
h4,
.h4,
h5,
.h5 {
	font-family: 'Montserrat', sans-serif;
	font-weight: bold;
}

h1, h2, h3, h4, h5, h6, blockquote {
	position: relative;
}

h1,
.h1 {
	font-size: clamp(2.625rem, 2vw + 1rem, 3.375rem);
}

h2,
.h2 {
	font-size: clamp(2.25rem, 10vw, 3rem);
}

h3,
.h3 {
	font-size: 1.625rem;
}

h4,
.h4 {
	font-size: 1.25rem;
	font-weight: 500;
}

h5,
.h5 {
	font-size: 1rem;
}

p {
	font-size: 1rem;
	font-weight: normal;
}

a, .link {
	color: var(--orange);
	text-decoration: none;

	&:hover {
		text-decoration: underline;
	}
}

button {
	border: none;
}

.visually-hidden {
	position: absolute;
	width: 1px;
	height: auto;
	margin: 0;
	padding: 0;
	border: 0;
	clip: rect(0 0 0 0);
	overflow: hidden;
}

// style all scroll bars except on body
body * {
	&::-webkit-scrollbar {
		width: 0.5rem;
	}

	/* Track */
	&::-webkit-scrollbar-track {
		background-color: #ccd0d5;
	}

	/* Handle */
	&::-webkit-scrollbar-thumb {
		background: #7c7c7c;
		border-radius: 10px;
	}
}

